# basenc

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  base32.c  base32.h  buildprep  configure.ac
doc/: Makefile.am  basenc.3  copyright.txt
src/: CMakeLists.txt  Makefile.am  base32.c  base32.h  base32enc.c  base64.c  base64.h  base64enc.c  basenc.h
tests/: Makefile.am  test_base32.c  test_base64.c
